--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,11 @@ jobhunter.upload-file.base-uri=file:///D:/Java_Spring_Restful/upload/
 spring.data.web.pageable.one-indexed-parameters=true
 #
 ###
+#config gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=quanvu41003@gmail.com
+spring.mail.password=ureinubpbteflsot
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
