--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,7 +41,9 @@ spring.data.web.pageable.one-indexed-parameters=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=quanvu41003@gmail.com
-spring.mail.password=ureinubpbteflsot
+
+//get app password gmail
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
